<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up_step1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="thuyhien.layoutanduicontrol.SignUpStep1Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_first_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/hint_first_name" />

        <EditText
            android:id="@+id/edit_last_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/hint_last_name" />
    </LinearLayout>

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_vertical"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_vertical"
        android:hint="@string/hint_phone_number"
        android:inputType="phone" />

    <RadioGroup
        android:id="@+id/radio_group_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_vertical"
        android:checkedButton="@+id/rb_option_female"
        android:gravity="center"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rb_option_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/spacing_right_radio_btn"
            android:text="@string/title_radio_male" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rb_option_female"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/title_radio_female" />
    </RadioGroup>

    <Button
        android:id="@+id/button_next"
        style="@style/CommonButtonTheme"
        android:layout_marginTop="@dimen/margin_top_btn_next"
        android:text="@string/action_next" />
</LinearLayout>
